# eurojobsearch

./: .gitignore  LICENSE  README.md  app.py  build_demo.py  companies.json  pyproject.toml  recruitee_companies.json  requirements.txt  workable_companies.json
docs/: index.html
templates/: index.html
tests/: test_html_sources.py  test_normalize_title.py
